# go1_ws

./: README.md
src/controls/quadruped_controller/: CMakeLists.txt  package.xml
src/controls/quadruped_controller/include/: go1_controller.h  leg_control_data_lcmt.hpp  pd_tau_targets_lcmt.hpp  rc_command_lcmt.hpp  state_estimator_lcmt.hpp
src/controls/quadruped_controller/include/Tools/: CMakeLists.txt  NumericalTool.cpp  NumericalTool.h  RobotLeg.cpp  RobotLeg.h  TrajectoryGenerator_V2.cpp  TrajectoryGenerator_V2.h  go1_enum.h
src/controls/quadruped_controller/launch/: go1_controller.launch
src/controls/quadruped_controller/src/: go1_controller.cpp  go1_controller_node.cpp
src/robots/go1_control/: CMakeLists.txt  package.xml
src/robots/go1_control/config/: go1_control.yaml  go1_joint_limits.yaml
src/robots/go1_control/launch/: go1_control.launch
src/robots/go1_description/: CMakeLists.txt  package.xml
src/robots/go1_description/go1/urdf/: go1.urdf  go1.xacro
src/robots/go1_gazebo/: CMakeLists.txt  package.xml
src/robots/go1_gazebo/launch/: go1_spawn.launch
src/robots/go1_gazebo/worlds/: basic.world
