<?xml version="1.0"?>
<package format="2">
  <name>go1_control</name>
  <version>0.0.0</version>
  <description>The go1_control package</description>

  <maintainer email="jinwoo@todo.todo">jinwoo</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <export>
  </export>
</package>
