<?xml version="1.0"?>
<package format="2">
  <name>go1_gazebo</name>
  <version>0.0.0</version>
  <description>The go1_gazebo package</description>

  <maintainer email="jinwoo@todo.todo">jinwoo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>go1_description</exec_depend>
  <exec_depend>go1_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
  </export>
</package>
